feat: generate pyxis qrcode route and make rule api
