# backend/api/swagger.json
@@ -394,6 +394,40 @@
                 }
             }
         },
+        "/pyxis/qrcode": {
+            "post": {
+                "description": "Create a QR code for a given pyxis ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "image/png"
+                ],
+                "tags": [
+                    "Pyxis"
+                ],
+                "summary": "Generate a QR code for a Pyxis",
+                "parameters": [
+                    {
+                        "description": "Pyxis ID to generate QR code for",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.GenerateQRCodeOutputDTO"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "QR code image",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/pyxis/{id}": {
             "get": {
                 "description": "Retrieve a Pyxis entity by ID",
@@ -995,6 +1029,14 @@
                     "type": "string"
                 },
                 "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.GenerateQRCodeOutputDTO": {
+            "type": "object",
+            "properties": {
+                "pyxis_id": {
                     "type": "string"
                 }
             }
